pkg/shell/nav.scss
/* ... */
.header {
    background: var(--pf-global--BackgroundColor--dark-300);
    display: grid;
    align-items: center;
    grid-template-columns: auto;
    grid-auto-columns: max-content;
    grid-auto-flow: column;
    overflow: visible;

    .ct-header-item {
        display: flex;
        height: 100%;
        align-items: center;
    }

    .ct-header-item > a,
    .ct-header-item > button,
    .ct-header-item > span {
        color: var(--pf-global--Color--light-100) !important;
    }

    .fa,
    .pficon {
        align-items: center;
        border-radius: 50%;
        display: inline-flex;
        font-size: 1rem;
        justify-content: center;
        margin-right: 0.5rem;
        padding-right: 0;
        position: static;
        vertical-align: middle;
        height: 2rem;
    }

    .pficon-user {
        width: 2rem;
        font-size: 2rem;
        background: #fff;
        color: #bbb;
        overflow: hidden;

        &::before {
            font-size: 80%;
            position: relative;
            top: 8%;
        }
    }

    .user-name {
        display: inline-flex;
    }
}

.area-ct-content {
    position: relative;
    z-index: 1;
    display: block;

    > iframe {
        height: 100%;
        position: absolute;
    }

    > .curtains-ct {
        position: static !important;
        // position: absolute !important;
    }
}

.pf-c-select button,
.ct-header-item button,
.ct-header-item a {
        &:hover, &:focus &:active {
            text-decoration: none;
            background-color: var(--pf-global--BackgroundColor--dark-400);
        }
}

.screenreader-text {
    position: absolute;
    left: -999px;
    width:1px;
    height: 1px;
    top: auto;
}

/* Desktop navigation */
@media (min-width: $desktop) {

    .screenreader-text:focus {
        display: inline-block;
        height: auto;
        width: auto;
        position: static;
        padding: 19px 0;
        width: 100%;
        text-align: center;
        background-color: var(--pf-global--BackgroundColor--dark-300);
        color: white;
    }

    .mobile_v {
        display: none !important;
    }

    .desktop_v {
        display: block;
    }

    .view-hosts .sidebar-hosts {
        animation: navHostsSlide 300ms ease-out;
        transform-origin: top;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: var(--pf-global--BackgroundColor--dark-200);
        z-index: 999;

        &.edit-hosts {
            .pf-c-nav__list {
                width: calc(100% + 8rem);
                animation: navHostsEditSlideOut 200ms;

                .pf-c-nav__link {
                    padding-right: 1rem;
                    transition: all 200ms;
                }

                .pf-c-button {
                    animation: navHostsEditButtonsAppear 400ms;
                }

                &,
                .pf-c-button {
                    animation-timing-function: ease-in-out;
                }
            }
        }
    }

    .ct-switcher,
    .header {
        border-top: 3px solid var(--pf-global--primary-color--light-100);
        border: 1px solid #999;
        border-width: 0 1px 0 0;
    }

    .header {
        grid-gap: 1rem;

        .ct-header-item > a,
        .ct-header-item > button,
        .ct-header-item > span {
            line-height: 2rem;
            padding: 0 1rem 0 1rem;
            font-size: var(--pf-global--FontSize--md);
            margin: 0;
            height: 100%;
        }

        .credential-unlocked {
            /* AAA contrast: simulate #a1a1a1 on #151515 */
            opacity: 0.6;
        }

        .fa,
        .pficon {
            vertical-align: bottom;
        }
    }

    .ct-switcher > .pf-c-select > button {
        padding-left: 1.5rem;
    }

    .area-ct-subnav {
        /* Fade end of the host menu to indicate more content is available */

        &::after {
            content: '';
            display: block;
            position: absolute;
            left: 0;
            right: 0;
            height: 2rem;
            pointer-events: none;
            z-index: 2;
            /* Accomodate scrollbars with margin (IE11 needs 18px; rest are less) */
            margin-right: 18px;
            background: var(--color-ct-nav-cover-down);
            bottom: 0;
            height: 4rem;
        }
    }

    .nav-hosts-menu {
        display: none;

        &.interact {
            display: block;
        }
    }
}
/* ... */

